updating our details and changing the h1 font weight

--- a/index.html
+++ b/index.html
@@ -11,21 +11,37 @@
   <body>
     <header class="masthead">
       <p class="masthead-intro">Hi I'm</p>
-      <h1 class="masthead-heading">Isis Lara</h1>
+      <h1 class="masthead-heading"><i>Isis Lara</i></h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hello and welcome to a brief bio of mysself.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am originally from San Pedro Sula, Honduras.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>
+        So, I am a collector of hobbies. <br />
+        They range from stilt walking and balloon twisting to reading and
+        drawing.
+        <br />
+        I have dogs that I enjoy going on hikes with. I like hosting gatherings
+        and I also own about 80 different species of plants.
+      </p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>
+        I would love to be a video game developer but... being retired sounds
+        good too.
+      </p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>
+        On a good day, I live 15 minutes away from Seattle. <br />
+        However, when you include traffic, it is about 40-50 minutes away.
+      </p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>
+        I want a career where I can be creative and yet grounded at the same
+        time.
+      </p>
     </section>
 
     <footer id="footer">
