--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
 
-    <title>About Me</title>
+    <title>Isis V. Lara</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
